[gd_scene load_steps=10 format=3 uid="uid://bvtp75wryh44a"]

[ext_resource type="Script" path="res://Characters/Enemy.gd" id="1_xxpxd"]
[ext_resource type="Texture2D" uid="uid://dtf2t450etjge" path="res://Assets/goombas.png" id="2_o5k1e"]
[ext_resource type="Theme" uid="uid://dpxlpndvv1r3i" path="res://Label.tres" id="2_ro1m8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gbwsg"]
atlas = ExtResource("2_o5k1e")
region = Rect2(48, 0, 24, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga2sm"]
atlas = ExtResource("2_o5k1e")
region = Rect2(96, 0, 24, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoaoe"]
atlas = ExtResource("2_o5k1e")
region = Rect2(0, 0, 24, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_g38bl"]
atlas = ExtResource("2_o5k1e")
region = Rect2(24, 0, 24, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_wof2d"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbwsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga2sm")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"Dead",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoaoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g38bl")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5t3id"]
radius = 11.2238

[node name="Enemy" type="Area2D"]
process_mode = 3
position = Vector2(1080, 536)
scale = Vector2(2.68981, 2.38794)
script = ExtResource("1_xxpxd")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Texto" type="RichTextLabel" parent="."]
clip_contents = false
layout_direction = 1
offset_left = -9.66455
offset_top = -28.0579
offset_right = 1715.34
offset_bottom = 271.942
scale = Vector2(0.05, 0.05)
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme = ExtResource("2_ro1m8")
theme_type_variation = &"Enemy"
bbcode_enabled = true
text = "hola"
fit_content = true
scroll_active = false
autowrap_mode = 2
shortcut_keys_enabled = false
language = "es"

[node name="AnimationCompa" type="AnimatedSprite2D" parent="."]
position = Vector2(33.4596, -3.35019)
scale = Vector2(1.13586, 1.24439)
sprite_frames = SubResource("SpriteFrames_wof2d")
animation = &"Dead"
autoplay = "default"
frame_progress = 0.758993

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2(33.4595, -2.09386)
shape = SubResource("CircleShape2D_5t3id")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="dead" from="." to="." method="_on_dead"]
